# ros_communication_devcontainer

./: .gitignore  .gitmodules  README.md  config.json.example  data_dict.json.example  install.sh  install_rosotacom.sh  remote_assist.yaml  run_session_in_container.py  session-configuration.md  stop_session_in_container.py  terminology.md
.devcontainer/: devcontainer.json.template  re_generate_devcontainer_json.py
bind-mounts/catkin-ws-src/compressed_costmap_msgs/: CMakeLists.txt  package.xml
bind-mounts/catkin-ws-src/costmap_compress_decompress/: CMakeLists.txt  package.xml
bind-mounts/catkin-ws-src/costmap_compress_decompress/launch/: costmap_compress_decompress.launch
bind-mounts/catkin-ws-src/costmap_compress_decompress/src/: costmap_compression.cpp  costmap_decompression.cpp
bind-mounts/workspace/: ips_and_accounts.json
bind-mounts/workspace/communication_session/: create_session.py  log_topics.txt  logger.py  resolve_keys.py  session.yaml  speed_test.py  traffic_monitor.py
bind-mounts/workspace/compositions/: run_composition.py
bind-mounts/workspace/utility/: ensure_environment.py  machine_utils.py  workspace_utils.py
bind-mounts/workspace/vpn/: start_vpn_template.sh
bind-mounts/workspace/vsc-config/: container.code-workspace
config/: devcontainer.json.template  docker_run_args.json.template  path_to_data_dict  project.json  static_docker_run_args.json.template
config/examples/: data_dict.json  local.json
docker/: Dockerfile  build.py  build_run.py  build_up.py  down.py  entrypoint.sh  exec.py
docker_/: Dockerfile  build.py  build_run.py  build_up.py  entrypoint.sh  exec.py  rosconsole_log4cxx.cpp  roslogging.py  stop.py
example/1_heartbeat/: run_machine_a.sh  run_machine_b.sh
example/1_hello_world_session/: run.sh
example/2_multi_machine_direct/: run_machine_a.sh  run_machine_b.sh
example/2_native_chatter/machine_a/: run_communication.sh
example/2_native_chatter/machine_b/: run_communication.sh
example/2_single_machine_multimaster/: run_listener.sh  run_talker.sh
example/3_comp_occ_grid/machine_a/: external_session.yaml  foxglove.json  run_communication.sh
example/3_comp_occ_grid/machine_b/: external_ros2docker_config.json  run_communication.sh
example/3_multi_machine/: run_machine_a.sh  run_machine_b.sh
example/3_multi_machine_relay/: run_machine_a.sh  run_machine_b.sh
example/4_comp_occ_grid_zen/machine_a/: run_communication.sh
example/4_comp_occ_grid_zen/machine_b/: run_communication.sh
example/4_external_container/machine_a/: external_ros2docker_config.json  run_communication.sh  wait_for_echo_topic.sh
example/4_external_container/machine_b/: external_ros2docker_config.json  run_communication.sh
example/4_external_master/machine_a/: master_session.yaml  run_communication.sh  run_master.py
example/4_external_master/machine_b/: master_session.yaml  run_communication.sh  run_master.py
example/5_showcase/machine_a/: external_ros2docker_config.json  external_session.yaml  master_session.yaml  run_communication.sh  run_external.py  run_master.py
example/5_showcase/machine_b/: master_session.yaml  run_communication.sh  run_master.py
example/ros1_catmux_docker/: build_and_run.py
example/ros2_catmux_docker/: Dockerfile
example/ros_catmux_docker/: Dockerfile  build_and_run.py
re_init/: re_generate_devcontainer_json.py  re_generate_docker_run_args.py  re_init.py
utils/: devcontainer_utils.py  files.py  getters.py
ws/: ros_bridge_params.yaml  run.py
ws/dds_configs/: cyclonedds.xml.template  fast_rtps_profile.xml  get_cyclonedds_xml.py  utils.py
ws/example/1_heartbeat/: b_to_a_topics.txt  session-definition.yaml
ws/example/1_hello_world_session/: .session_readonly.yaml  hello_world_session.yaml  session_specification.yaml
ws/example/2_multi_machine_direct/: common_plugin.yaml
ws/example/2_native_chatter/: session-definition.yaml
ws/example/2_single_machine_multimaster/: common_plugin.yaml
ws/example/3_comp_occ_grid/: a_to_b_topics.txt  b_to_a_topics.txt  qos.yaml  session-definition.yaml
ws/example/3_multi_machine_relay/: common_plugin.yaml  qos.yaml
ws/example/4_comp_occ_grid_zen/: session-definition.yaml
ws/example/4_external_master/: common_plugin.yaml  ros1_bridge.yaml
ws/example/5_showcase/: common_plugin.yaml  qos.yaml  ros1_bridge.yaml  topics_a_to_b.txt  topics_b_to_a.txt
ws/helpers/: create_session.py  create_session_yaml.py  ensure_environment.py  machine_utils.py  ws_utils.py
ws/ota_configs/: create_zenoh_json5.py  cyclonedds.xml.template  get_cyclonedds_xml.py  utils.py  zenoh.json5.template
ws/ros2_src/com/: package.xml  setup.cfg  setup.py
ws/ros2_src/com_cpp/: CMakeLists.txt  package.xml
ws/ros2_src/com_cpp/src/: hz_monitor.cpp  universal_compressor.cpp
ws/ros2_src/com_msgs/: CMakeLists.txt
ws/ros2_src/com_py/: setup.cfg  setup.py
ws/ros2_src/py_pubsub/: package.xml  setup.py
ws/ros2src/com_msgs/: CMakeLists.txt  package.xml
ws/ros2src/com_msgs/msg/: CompressedData.msg
ws/ros2src/com_py/: package.xml  setup.cfg  setup.py
ws/session/content/: get_data_dict_entries.py
ws/session/creation/: create_session_yaml.py  generate_session_files.py  run_session.py  run_session_in_external_terminal.py
ws/session_utility/: resolve_keys.py  session_plugin_base.yaml  start_fkie_master_sync.py  topic_relay_incoming.py  topic_relay_outgoing.py
ws/session_utility/compression/: image_bandwidth_reducer.py  universal_compressor.py  universal_decompressor.py
ws/vsc-config/: container.code-workspace
(+166 files in other folders)
