<?xml version="1.0"?>
<package format="2">
  <name>costmap_compress_decompress</name>
  <version>0.0.0</version>
  <description>The costmap_compress_decompress package</description>

  <maintainer email="gontscharow@fzi.de">ucl</maintainer>

  <license>BSD</license>

  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>roscpp</build_depend>
  <build_depend>visualization_msgs</build_depend>
  <build_depend>boost</build_depend>
  <build_export_depend>roscpp</build_export_depend>
  <build_export_depend>visualization_msgs</build_export_depend>
  <exec_depend>roscpp</exec_depend>
  <exec_depend>visualization_msgs</exec_depend>
  <exec_depend>boost</exec_depend>
</package>
