<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>com_cpp</name>
  <version>0.0.0</version>
  <description>
    C++ implementation of compression and monitoring utilities for ROS2 communication. 
    Provides universal compression/decompression nodes supporting multiple algorithms (bz2, gzip, zlib) 
    and frequency monitoring capabilities for ROS topics. Part of the ROS Communication DevContainer project.
  </description>
  <maintainer email="gontscharow@fzi.de">Martin Gontscharow</maintainer>
  <license>BSD-3-Clause</license>

  <test_depend>ament_copyright</test_depend>
  <test_depend>ament_flake8</test_depend>
  <test_depend>ament_pep257</test_depend>
  <test_depend>python3-pytest</test_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <build_depend>rclcpp</build_depend>
  <build_export_depend>rclcpp</build_export_depend>
  <exec_depend>rclcpp</exec_depend>

  <build_depend>boost</build_depend>
  <exec_depend>boost</exec_depend>
  
  <build_depend>rosidl_default_generators</build_depend>
  <exec_depend>rosidl_default_runtime</exec_depend>
  <depend>std_msgs</depend>
  <depend>builtin_interfaces</depend>
  <depend>com_msgs</depend>
</package>
