<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>com_msgs</name>
  <version>0.0.0</version>
  <description>
    Message definitions for ROS2 communication utilities. Contains CompressedData message type 
    used for efficient data transfer in the ROS Communication DevContainer project.
  </description>
  <maintainer email="gontscharow@fzi.de">Martin Gontscharow</maintainer>
  <license>BSD-3-Clause</license>

  <depend>builtin_interfaces</depend>
  <depend>std_msgs</depend>
  <build_depend>rosidl_default_generators</build_depend>
  <exec_depend>rosidl_default_runtime</exec_depend>

  <!-- For convenience, you can add an export tag -->
  <export>
    <build_type>ament_cmake</build_type>
  </export>

  <member_of_group>rosidl_interface_packages</member_of_group>

</package>
